--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   carousel_slider: ^4.1.1
   whatsapp_unilink: ^2.0.1+1
   image_picker: ^0.8.5+3
+  path_provider: ^2.0.11
 
   # firebase
   firebase_core: ^1.18.0
